force-app/main/default/objects/Site_IPCams_Setting__mdt/Site_IPCams_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Site IPCams Setting</label>
    <pluralLabel>Site IPCams Settings</pluralLabel>
</CustomObject>