force-app/main/default/objects/Site_IPCams_Setting__mdt/fields/Camera_Id__c.field-meta.xml
<CustomField>
    <fullName>Camera_Id__c</fullName>
    <label>Camera Id</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>