force-app/main/default/objects/Site_IPCams_Setting__mdt/fields/IP_Camera_URL__c.field-meta.xml
<CustomField>
    <fullName>IP_Camera_URL__c</fullName>
    <inlineHelpText>Example: https://motionntz.interpipe.biz/cam1</inlineHelpText>
    <label>IP Camera URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>