force-app/main/default/objects/Site_IPCams_Setting__mdt/fields/Preview_IMG__c.field-meta.xml
<CustomField>
    <fullName>Preview_IMG__c</fullName>
    <description>Name of image from static resources</description>
    <inlineHelpText>Name of image from static resources</inlineHelpText>
    <label>Preview IMG</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>